--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/jlovejo2/profile_generator#readme",
   "dependencies": {
     "axios": "^0.19.0",
-    "inquirer": "^7.0.1"
+    "electron-html-to": "^2.6.0",
+    "electron-prebuilt": "^1.4.13",
+    "html-pdf": "^2.2.0",
+    "inquirer": "^7.0.1",
+    "pdfkit": "^0.11.0"
   }
 }
